# homework-2026

./: .gitignore  pyproject.toml
phys340/: all_links.txt  get_them_links.py  ingest_all_faqs.py  link_ingest.py  links.txt  main.py  mess.ipynb  other.txt  pyproject.toml  qa_pairs.json  scratch.ipynb  tif.txt  upload_qa_to_s3.py
phys340/faqs/: www.revenue.wi.gov__Pages_FAQS_Act-12-Personal-Property-Aid.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-chargebk.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-ead.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-finrep.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-levy.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-newconst.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-ppaid.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-setsh.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-soa.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-taxempt.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-allocation-amendments.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-amends.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-annexations.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-audreport.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-audterm.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-basevalue.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-creation.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-devagree.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-extensions.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-general.aspx.json  www.revenue.wi.gov__Pages_FAQS_slf-tif-jrboard.aspx.json  (+14 more)
phys340/final/: final.html  final.ipynb
(+262 files in other folders)
