[project]
name = "phys340"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auto-uncertainties>=1.0.0",
    "boto3>=1.35.0",
    "bs4>=0.0.2",
    "ipykernel>=6.30.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pip>=25.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "sigfig>=1.3.19",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "uncertainties>=3.2.3",
]
